# advent-of-code-data

./: .gitignore  .travis.yml  LICENSE  README.md  README.rst  aocd.py  pyproject.toml  pytest.ini  setup.py
.github/: codecov.yml
.github/workflows/: tests.yml
aocd/: __init__.py  __init__.pyi  _compat.py  _ipykernel.py  _types.py  cli.py  cookies.py  cookies.pyi  example_parser.py  examples.json  examples.py  exceptions.py  get.py  get.pyi  models.py  models.pyi  post.py  post.pyi  runner.py  runner.pyi  transforms.py  transforms.pyi  types.py  utils.py  utils.pyi  version.py
tests/: conftest.py  pytest.ini  requirements.txt  test_aocd.py  test_auth.py  test_cli.py  test_cookies.py  test_date_finding.py  test_date_introspection.py  test_example_parser.py  test_get_answer.py  test_get_data.py  test_main.py  test_models.py  test_runner.py  test_submit.py  test_transforms.py  test_utils.py
