[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "advent-of-code-data"
version = "2.0.3"
description = "Get your puzzle data with a single import"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries",
    "Topic :: Games/Entertainment :: Puzzle Games",
]
dependencies = [
    "beautifulsoup4",
    "pebble",
    "urllib3",
    'tzdata ; platform_system == "Windows"',
    "aocd-example-parser >= 2023.2",
]

[[project.authors]]
name = "Wim Jeantine-Glenn"
email = "hey@wimglenn.com"

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://github.com/wimglenn/advent-of-code-data"

[project.optional-dependencies]
nb = ["IPython", "jupyter-server"]

[project.scripts]
aocd = "aocd.cli:main"
aoc = "aocd.runner:main"
aocd-token = "aocd.cookies:scrape_session_tokens"
aoce = "aocd.examples:main"

[tool.setuptools]
packages = ["aocd"]

[tool.setuptools.package-data]
aocd = ["py.typed"]


[project.entry-points]
"adventofcode.user" = {}  # for user solvers
"adventofcode.examples" = {}  # for example-parser implementations

[tool.pytest.ini_options]
addopts = """
  --strict-markers
  --disable-socket
  --allow-unix-socket
  --cov-branch
  --cov=aocd --cov=tests
  --cov-report=html --cov-report=term-missing:skip-covered"""
xfail_strict = true
markers = "answer_not_cached"

[tool.coverage.report]
exclude_also = [
  "if t\\.TYPE_CHECKING:"
]
